get user details API ADDED
