# src/routes/seriesRoutes.js
@@ -1,6 +1,6 @@
 const express = require('express');
 const router = express.Router();
-const { createSeries, getAllSeries ,assignTeamsToSeries,getTeamsForSeries,getDataValue} = require('../controllers/seriesController');
+const { createSeries, getAllSeries ,assignTeamsToSeries,getTeamsForSeries,getDataValue,getUserDetails} = require('../controllers/seriesController');
 
 
 
@@ -8,6 +8,7 @@ router.post('/createSeries', createSeries);
 
 router.get('/getAllSeries', getAllSeries);
 router.get('/getDataValue', getDataValue);
+router.get('/getUserDetails', getUserDetails);
 
 router.post('/:series_id/teams', assignTeamsToSeries);
 router.get('/:series_id/teams', getTeamsForSeries)
