# swagger-output.json
@@ -76,6 +76,19 @@
         }
       }
     },
+    "/api/series/getUserDetails": {
+      "get": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
     "/api/series/{series_id}/teams": {
       "post": {
         "description": "",
